Fixed ASCII art alignment

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html {
     background-color: #031c37;
     color: white;
     font-family: 'Courier New', Courier, monospace;
-    font-size:2.2vh;
+    font-size:2vh;
     overflow: hidden;
     height: 100vh;
 }
@@ -12,7 +12,11 @@ button {
     padding: .3em;
     font-size: 12pt;
     font-family: 'Courier New', Courier, monospace;
-    font-size:2.2vh;
+    font-size:2vh;
+}
+
+button:hover {
+    cursor: pointer;
 }
 
 #page-content {
@@ -73,6 +77,7 @@ button {
 }
 
 #ascii-art {
+    padding-left: auto;
     font-size: 1.2vh;
     height: auto;
     position: fixed;
